# multi-thread-test-task

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  utils.rs
uploads/: 5511c612-a265-4c58-83bb-358632cd0e9d_chunk  55255363-5d46-4e47-b278-863baf1de1f6_chunk  55255363-5d46-4e47-b278-863baf1de1f6_merged  9dbaea05-76c1-4c11-8931-e48844371da8_chunk  9dbaea05-76c1-4c11-8931-e48844371da8_merged  d2c6ec99-2a8f-45e7-b0ce-e4896401725a_merged
