[package]
name = "rust-image-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
futures = "0.3"
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
dotenv = "0.15.0"